updated latvian translation

--- a/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -32,9 +32,14 @@ developer-button.label = Izstrādātāju rīki
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
 developer-button.tooltiptext2 = Atvērt izstrādātāju rīkus (%S)
 
-loop-call-button.label = Uzaicināt kādu uz sarunu
-loop-call-button.tooltiptext = Uzaicināt kādu uz sarunu
+loop-call-button2.label = Sākt sarunu
+loop-call-button2.tooltiptext = Sākt sarunu
 
+social-share-button.label = Dalīties ar šo lapu
+social-share-button.tooltiptext = Dalīties ar šo lapu
+
+web-apps-button.label = Lietotnes
+web-apps-button.tooltiptext = Atklājiet lietotnes
 
 add-ons-button.label = Papildinājumi
 # LOCALIZATION NOTE(add-ons-button.tooltiptext2): %S is the keyboard shortcut
@@ -108,3 +113,7 @@ quit-button.tooltiptext.mac = Aizvērt %1$S (%2$S)
 panic-button.label = Aizmirst
 panic-button.tooltiptext = Aizmirst daļu pārlūkošanas vēstures
 
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Atvērt WebIDE
