--- a/lv/browser/chrome/browser/devtools/app-manager.properties
+++ b/lv/browser/chrome/browser/devtools/app-manager.properties
@@ -39,4 +39,7 @@ validator.accessFailedLaunchPath=Nevar piekļūt aplikācijas sākuma dokumentam
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
 validator.accessFailedLaunchPathBadHttpCode=Nevar piekļūt aplikācijas sākuma dokumentam '%1$S', saņemts HTTP kods %2$S
+index.deprecationNotice=Lietotņu pārvaldnieks nākamajos laidienos tiks aizvākts.  Jūsu projekti ir pārcelti uz WebIDE.
+index.launchWebIDE=Palaist WebIDE
+index.readMoreAboutWebIDE=Uzzināt vairāk
 
