--- a/lv/browser/chrome/browser/devtools/scratchpad.properties
+++ b/lv/browser/chrome/browser/devtools/scratchpad.properties
@@ -36,6 +36,10 @@ scratchpadContext.invalid=Pašreizējā režīmā nav iespējams izpildīt šo d
 # a file in Scratchpad.
 saveFileAs=Saglabāt failu kā
 
+scratchpad.statusBarLineCol  = Rinda %1$S, Kolona %2$S
+
+importFromFile.convert.failed=Neizdevās pārveidot failu uz unikodu no %1$S.
+
 # LOCALIZATION NOTE  (saveFile.failed): This is the message displayed when file
 # save fails.
 saveFile.failed=Faila saglabāšana neizdevās.
