--- a/lv/browser/chrome/browser/devtools/styleeditor.properties
+++ b/lv/browser/chrome/browser/devtools/styleeditor.properties
@@ -73,7 +73,7 @@ open.commandkey=VK_F7
  
 # LOCALIZATION NOTE (open.accesskey): The access key used to open the style
 # editor.
-open.accesskey=y
+open.accesskey=S
 
 error-compressed=Nevar parādīt informāciju par saspiestajām stilu lapām
 
