--- a/lv/browser/chrome/browser/downloads/downloads.properties
+++ b/lv/browser/chrome/browser/downloads/downloads.properties
@@ -73,3 +73,15 @@ fileExecutableSecurityWarningDontAsk=Nākamreiz nejautāt šo
 
 otherDownloads2=+ %1$S cita lejupielāde; + %1$S citas lejupielādes; + %1$S citas lejupielādes
 
+blockedMalware=Šajāfairā ir vīruss vai kaitnieciska programma.
+blockedPotentiallyUnwanted=Šis fails var kaitēt jūsu datoram.
+blockedUncommon=Šis fails var būt bīstams.
+
+unblockHeader=Vai tiešām vēlaties atļaut šo failu?
+unblockTypeMalware=Šajāfailāir vīruss vai kāda cita kaitnieciska programma, kas kaitēs jūsu datoram.
+unblockTypePotentiallyUnwanted=Šajā failā, izliekoties par noderīgu lejupielādi, slēpjas iestatījumu un programmu izmaiņas.
+unblockTypeUncommon=Šis fails ir lejupielādēts no nezināmas un iespējami bīstamas lapas, to atvērt var būt bīstami.
+unblockTip=Varat mēģināt atrast šo failu citā vietā vai lejupielādēt vēlreiz.
+unblockButtonContinue=Atļaut lejupielādi
+unblockButtonCancel=Pasargāt mani
+
