--- a/lv/browser/chrome/browser/places/places.properties
+++ b/lv/browser/chrome/browser/places/places.properties
@@ -89,3 +89,6 @@ lockPrompt.title=Pārlūka ielādes kļūda
 lockPrompt.text=Grāmatzīmju un pārlūkošanas vēstures funkcijas nebūs pieejamas, jo %S failus izmanto kāda cita programma. Dažas drošības programmas var radīt šo problēmu.
 lockPromptInfoButton.label=Uzzināt vairāk
 lockPromptInfoButton.accessKey=U
+switchtabResultLabel=Cilne
+keywordResultLabel=Atslēgas vārds
+searchengineResultLabel=Meklēšana
