[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/downloads/downloads.properties
+++ b/es-MX/browser/chrome/browser/downloads/downloads.properties
@@ -47,6 +47,7 @@ stateDirty=Bloqueado: Podría contener virus o spyware
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 blockedMalware=Este archivo contiene un virus o un malware.
 blockedPotentiallyUnwanted=Este archivo puede dañar tu computadora.
+blockedUncommon=Este archivo puede no ser seguro para abrir.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -56,6 +57,13 @@ blockedPotentiallyUnwanted=Este archivo puede dañar tu computadora.
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=¿Estás seguro(a) que quieres desbloquear este archivo?
+unblockTypeMalware=Este archivo contiene un virus u otro malware que podría dañar tu computadora.
+unblockTypePotentiallyUnwanted=Este archivo, haciéndose pasar por una descarga útil, realizará cambios inesperados en tus programas y configuraciones.
+unblockTypeUncommon=Este archivo ha sido descargado de un sitio web desconocido y potencialmente peligroso, puede que no sea seguro abrirlo.
+unblockTip=Puedes buscar una fuente de descarga alternativa o intentar descargar este archivo de nuevo más tarde.
+unblockButtonContinue=Desbloquear de todas formas
+unblockButtonCancel=Mantenerme seguro
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
