--- a/es-MX/dom/chrome/layout/css.properties
+++ b/es-MX/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Se esperaba un identificador para el sistema de extensi
 PECounterASWeight=Cada peso en el descriptor additive-symbols ha de ser menor que el peso previo.
 PEClassSelEOF=nombre de la clase
 PEClassSelNotIdent=Se esperaba un identificador para el selector de la clase, pero se encontró '%1$S'.
+PECoordinatePair=Se esperaba un par de coordenadas pero se encontró '%1$S'.
 PETypeSelEOF=tipo de elemento
 PETypeSelNotType=Se esperaba nombre de elemento o '*', pero se encontró '%1$S'.
 PEUnknownNamespacePrefix=Prefijo de espacio de nombre desconocido '%1$S'.
