--- a/es-MX/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-MX/security/manager/chrome/pipnss/nsserrors.properties
@@ -129,6 +129,11 @@ SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL ha recibido un mensaje de negoc
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Característica SSL no admitida en esa versión del protocolo.
 SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL ha recibido un mensaje de negociación Certificate Status inesperado.
 SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algoritmo resumen no admitido utilizado por el interlocutor TLS.
+SSL_ERROR_DIGEST_FAILURE=Falló la función de resumen.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algoritmo de firma incorrecto especificado en un elemento firmado digitalmente.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Se activó la extensión de negociación del siguiente protocolo, pero la llamada de respuesta se inicializó antes de necesitarse.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=El servidor no admite protocolos anunciados por el cliente en la extensión ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=El servidor rechazó la negociación porque el cliente degradó a una versión TLS inferior a la que admite el servidor.
 SEC_ERROR_IO=Ha ocurrido un error de E/S durante la autorización de seguridad.
 SEC_ERROR_LIBRARY_FAILURE=fallo de la biblioteca de seguridad.
 SEC_ERROR_BAD_DATA=biblioteca de seguridad: se han recibido datos incorrectos.
