--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -6,9 +6,11 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Unirse a la conversación
 first_time_experience_button_label=Primeros pasos
 
 share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
@@ -261,6 +263,7 @@ legal_text_privacy = Política de privacidad
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Basado en
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=¿Qué te pareció la conversación?
@@ -288,16 +291,24 @@ feedback_rejoin_button=Volver a unirse
 feedback_report_user_button=Reportar usuario
 
 help_label=Ayuda
+tour_label=Paseo
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Conversación {{conversationLabel}}
 rooms_leave_button_label=Salir
+rooms_list_copy_url_tooltip=Copiar enlace
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Conversación actual;Conversaciones actuales
+rooms_list_delete_tooltip=Eliminar conversación
 rooms_list_deleteConfirmation_label=¿Estás seguro?
+rooms_list_no_current_conversations=No hay conversaciones actuales
+rooms_name_this_room_label=Poner un nombre a esta conversación
+rooms_new_room_button_label=Iniciar conversación
 rooms_only_occupant_label=Eres el primero aquí.
 rooms_panel_title=Elije una conversación o inicia una nueva
 rooms_room_full_label=Ya hay dos personas en esta conversación
