[ne-NP] update from Pootle (firefox)

--- a/ne-NP/browser/chrome/browser/places/places.properties
+++ b/ne-NP/browser/chrome/browser/places/places.properties
@@ -44,12 +44,15 @@ recentTagsTitle=हालैका ट्यागहरु
 OrganizerQueryHistory=इतिहास
 OrganizerQueryDownloads=डाउनलोडहरू
 OrganizerQueryAllBookmarks=सबै पुस्तकचिनोहरु
+OrganizerQueryTags=ट्यागहरू
 
 # LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
 # keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
+tagResultLabel=ट्याग
+bookmarkResultLabel=पुस्तकचिनो
 switchtabResultLabel=ट्याब
 keywordResultLabel=शब्दकुञ्जी
 
