--- a/ne-NP/dom/chrome/dom/dom.properties
+++ b/ne-NP/dom/chrome/dom/dom.properties
@@ -100,21 +100,36 @@ PluginHangUIStopButton=प्लगइन रोक्नुहोस्
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
+KeyNameExselWarning=KeyboardEvent.key मान "Exsel" अप्रचलित हो र "ExSel"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
+KeyNameMenuWarning=KeyboardEvent.key मान "Menu" अप्रचलित हो र "ContextMenu"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
+KeyNameEscWarning=KeyboardEvent.key मान "Esc" अप्रचलित हो र "Escape"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
+KeyNameHalfWidthWarning=KeyboardEvent.key मान "HalfWidth" अप्रचलित हो र "Hankaku"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
+KeyNameFullWidthWarning=KeyboardEvent.key मान "FullWidth" अप्रचलित हो र "Zenkaku"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
+KeyNameSelectMediaWarning=KeyboardEvent.key मान "SelectMedia" अप्रचलित हो र "MediaSelect"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
+KeyNameMediaNextTrackWarning=KeyboardEvent.key मान "MediaNextTrack अप्रचलित हो र "MediaTrackNext"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
+KeyNameMediaPreviousTrackWarning=KeyboardEvent.key मान "MediaPreviousTrack" अप्रचलित हो र "MediaTrackPrevious"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
+KeyNameRedWarning=KeyboardEvent.key मान "Red" अप्रचलित हो र "ColorF0Red"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
+KeyNameGreenWarning=KeyboardEvent.key मान "Green" अप्रचलित हो र "ColorF1Green"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
+KeyNameYellowWarning=KeyboardEvent.key मान "Yellow" अप्रचलित हो र "ColorF2Yellow"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
+KeyNameLiveWarning=KeyboardEvent.key मान "Live" अप्रचलित हो र हटाइने छ । थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
+KeyNameAppsWarning=KeyboardEvent.key मान "Apps" अप्रचलित हो र याे हटाइनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
+KeyNameFastFwdWarning=KeyboardEvent.key मान "FastFwd" अप्रचलित हो र "MediaFastForward"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
+KeyNameZoomWarning=KeyboardEvent.key मान "Zoom" अप्रचलित हो र "ZoomToggle"मा पुन: नामाकरण गरिनेछ। थप सहयोगको लागि https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
