[oc] update from Pootle (firefox)

--- a/oc/webapprt/webapprt/webapp.properties
+++ b/oc/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Installar %S
 webapps.install.description=Volètz installar %S ?
 webapps.install.install=Installar ara
 webapps.install.dontinstall=Installar pas
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Desinstallar %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Volètz desinstallar %S ?
+webapps.uninstall.uninstall=Desinstallar l'aplicacion
+webapps.uninstall.dontuninstall=Desinstallar pas
 
 paymentDialog.title=Pagament
 paymentDialog.message=Quin prestatari de pagament volètz utilizar ?
