--- a/oc/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/oc/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,11 @@ quit-button.tooltiptext.linux2 = Quitar %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Quitar %1$S (%2$S)
+
+
+
+
+web-apps-button.label = Apps
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
