--- a/oc/browser/chrome/browser/devtools/scratchpad.properties
+++ b/oc/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,9 @@ openFile.title=Dobrir un fichièr
 # open fails.
 openFile.failed=Fracàs de la lectura del fichièr.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Suprimir d'elements
@@ -78,6 +81,11 @@ browserContext.notification=Aquesta lausa JavaScript s'executa dins lo contèxte
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/fr/Outils/Ardoise
 
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Linha %1$S, Colomna %2$S
+
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
 fileNoLongerExists.notification=Aqueste fichièr existís pas mai.
@@ -102,3 +110,11 @@ scratchpad.label=Lausa
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Lausa
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
