--- a/oc/browser/chrome/browser/devtools/toolbox.properties
+++ b/oc/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Aisinas pels desvolopaires
 # for the options panel tab.
 optionsButton.tooltip=Opcions de la bóstia d'aisinas
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Opcions
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 
@@ -65,3 +69,11 @@ browserConsoleCmd.commandkey=VK_F4
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Seleccionar un element de la pagina
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tèma escur
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Tèma clar
