--- a/oc/browser/chrome/browser/shellservice.properties
+++ b/oc/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=&Opcions de %S
 safeModeLabel=%S &Mòde sens fracàs
-setDefaultBrowserTitle=Navigador per defaut
-setDefaultBrowserMessage=%S es pas definit coma vòstre navigador per defaut. Ne volètz far vòstre navigador per defaut ?
-setDefaultBrowserDontAsk=Totjorn far la verificacion a l'aviada de %S.
-alreadyDefaultBrowser=%S ja es vòstre navigador per defaut.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Opcions
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = Demandar pas mai
+setDefaultBrowserNever.accesskey   = p
+
+
 desktopBackgroundLeafNameWin=Fons d'ecran.bmp
 DesktopBackgroundDownloading=Enregistrament de l'imatge...
 DesktopBackgroundSet=Definir coma fons d'ecran
