--- a/oc/dom/chrome/security/csp.properties
+++ b/oc/dom/chrome/security/csp.properties
@@ -18,9 +18,6 @@ CSPViolationWithURI = Los paramètres de la pagina an empachat lo cargament d'un
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
 triedToSendReport = A ensajat de mandar un rapòrt a una URI invalida : "%1$S"
-# LOCALIZATION NOTE (errorWas):
-# %1$S is the error resulting from attempting to send the report
-errorWas = l'error èra : « %1$S »
 # LOCALIZATION NOTE (couldNotParseReportURI):
 # %1$S is the report URI that could not be parsed
 couldNotParseReportURI = a pas pogut analisar lo rapòrt URI : %1$S
@@ -36,21 +33,9 @@ reportURInotHttpsOrHttp2 = L'URI del rapòrt (%1$S) deu èsser de tipe HTTP o HT
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
 reportURInotInReportOnlyHeader = Aqueste site (%1$S) possedís una politica Report-Only sens URI de rapòrt. CSP blocarà pas aquesta politica e poirà pas raportar sas violacions.
-# LOCALIZATION NOTE (pageCannotSendReportsTo):
-# %1$S is the URI of the page with the policy
-# %2$S is the report URI that could not be used
-pageCannotSendReportsTo = La pagina sus %1$S pòt pas mandar cap de rapòrts a %2$S
-allowOrDefaultSrcRequired = Las directivas requesidas « allow » o « default-src » son absentas. Retorn a « default-src 'none' »
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
 failedToParseUnrecognizedSource = Impossible d'analisar la font pas reconeguda %1$S
-# LOCALIZATION NOTE (reportPostRedirect):
-# %1$S is the specified report URI before redirect
-reportPostRedirect = Lo mandadís del rapòrt de violacion a %1$S a fracassat, perque una redireccion s'es producha
-# LOCALIZATION NOTE (allowDirectiveIsDeprecated):
-# Don't translate "allow" and "default-src" as they are keywords and part of
-# the CSP protocol syntax.
-allowDirectiveIsDeprecated = la directiva « allow » es obsoleta, utilizatz la directiva equivalenta « default-source » a la plaça
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
 inlineScriptBlocked = Una temptativa d'execucion d'escripts embarcats es estada blocada
@@ -63,41 +48,13 @@ scriptFromStringBlocked = Una temptativa d'apèl JavaScript dempuèi una cadena 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S es estat interpretat coma un nom d'òste e non pas coma un mot clau. Se s'agissiá vertadièrament d'un mot clau, utilizatz '%2$S' (enrodat d'apostròfas).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
-policyURINotAlone = La directiva « policy-uri » pòt solament aparéisser sola
-noParentRequest = La « policy-uri » pòt pas èsser recuperada sens un CSP e la requèsta d'un parent.
-# LOCALIZATION NOTE (policyURIParseError):
-# %1$S is the URI that could not be parsed
-policyURIParseError = Impossible d'analisar l'URI dins l'URI de la politica de seguretat : %1$S
-# LOCALIZATION NOTE (nonMatchingHost):
-# %1$S is the URI host that does not match
-nonMatchingHost = Impossible de recuperar l'URI de la politica de seguretat dempuèi un nom d'òste que correspond pas : %1$S
-# LOCALIZATION NOTE (nonMatchingPort):
-# %1$S is the URI port that does not match
-nonMatchingPort = Impossible de recuperar l'URI de la politica de seguretat dempuèi un pòrt que correspond pas : %1$S
-# LOCALIZATION NOTE (nonMatchingScheme):
-# %1$S is the URI scheme that does not match
-nonMatchingScheme = Impossible de recuperar l'URI de la politica de seguretat dempuèi un esquèma que correspond pas : %1$S
-# LOCALIZATION NOTE (errorFetchingPolicy):
-# %1$S is the error that caused fetching to fail
-errorFetchingPolicy = Error al moment de la recuperacion de la « policy-uri » : %1$S
-cspSourceNotURI = L'argument provesit es pas una nsIURI
-argumentIsNotString = L'argument provesit es pas una cadena de caractèrs
-selfDataNotProvided = Impossible d'utilizar « self » se « self data » es pas provesit
-# LOCALIZATION NOTE (uriWithoutScheme):
-# %1$S is the URI without a scheme
-uriWithoutScheme = Impossible d'analisar l'URI sens un esquèma : %1$S
-selfKeywordNoSelfData = Mot clau « self » utilizat, mas cap de « self data » es pas especificada
 # LOCALIZATION NOTE (couldntParseInvalidSource):
 # %1$S is the source that could not be parsed
 couldntParseInvalidSource = Impossible d'analisar la font invalida %1$S
-# LOCALIZATION NOTE (hostSourceWithoutData):
-# %1$S is the source
-hostSourceWithoutData = Impossible de definir en « host-only » la font %1$S sens la donada « self »
-# LOCALIZATION NOTE (sourceWithoutData):
-# %1$S is the source
-sourceWithoutData = Impossible de crear la font %1$S sens la donada « self »
 # LOCALIZATION NOTE (couldntParseInvalidHost):
 # %1$S is the host that's invalid
 couldntParseInvalidHost = Impossible d'analisar l'òste invalid %1$S
@@ -107,21 +64,6 @@ couldntParseScheme = a pas pogut analisar lo rapòrt URI : %1$S
 # LOCALIZATION NOTE (couldntParsePort):
 # %1$S is the string source
 couldntParsePort = Impossible d'analisar lo pòrt dins %1$S
-# LOCALIZATION NOTE (notIntersectPort):
-# %1$S is one source we tried to intersect
-# %2$S is the other
-notIntersectPort = Impossible de crosar %1$S amb %2$S a causa d'un problèma de pòrt.
-# LOCALIZATION NOTE (notIntersectScheme):
-# %1$S is one source we tried to intersect
-# %2$S is the other
-notIntersectScheme = Impossible de crosar %1$S amb %2$S a causa d'un problèma d'esquèma.
-# LOCALIZATION NOTE (intersectingSourceWithUndefinedHost):
-# %1$S is the source
-intersectingSourceWithUndefinedHost = Crosament de la font amb l'òste pas definit : %1$S
-# LOCALIZATION NOTE (intersectingSourcesWithUndefinedHosts):
-# %1$S is the first source
-# %2$S is the second source
-intersectingSourcesWithUndefinedHosts = Crosament de doas fonts amb d'òstes pas definits : %1$S e %2$S
 # LOCALIZATION NOTE (duplicateDirective):
 # %1$S is the name of the duplicate directive
 duplicateDirective = Doblon de la directiva %1$S detectat. Totas las instàncias, levat la primièra, seràn ignoradas.
