Bug 1093595 - Change strings to add a description about weak encryption

--- a/sk/security/manager/chrome/pippki/pippki.properties
+++ b/sk/security/manager/chrome/pippki/pippki.properties
@@ -78,7 +78,7 @@ pageInfo_EncryptionWithBitsAndProtocol=Pripojenie je šifrované (%1$S, %2$S bit
 pageInfo_Privacy_Encrypted1=Stránka, ktorú čítate, bola zašifrovaná predtým, ako bola odoslaná cez internet.
 pageInfo_Privacy_Encrypted2=Vďaka zašifrovaniu je pre neautorizovaných ľudí ťažké vidieť informácie, putujúce medzi dvoma počítačmi. Je preto nepravdepodobné, že by niekto prečítal túto stránku počas jej cesty po internete.
 pageInfo_MixedContent=Pripojenie je čiastočne šifrované
-pageInfo_Privacy_Mixed1=Časť stránky, ktorú čítate, nebola zašifrovaná predtým, ako bola odoslaná cez internet.
+pageInfo_Privacy_Broken1=Časť práve prehliadanej stránky nebola zašifrovaná predtým, ako bola odoslaná cez internet, prípadne šifrovanie nie je dostatočné bezpečné.
 
 #Cert Viewer
 certDetails=Zobrazenie certifikátu:
