--- a/da/browser/chrome/browser/devtools/app-manager.properties
+++ b/da/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=App-manager vil blive fjernet i en fremtidig version af Firefox. Dine projekter er blevet flyttet over i WebIDE.
+index.launchWebIDE=Start WebIDE
+index.readMoreAboutWebIDE=Læs mere
+
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
