--- a/da/browser/chrome/browser/devtools/webide.properties
+++ b/da/browser/chrome/browser/devtools/webide.properties
@@ -5,7 +5,7 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-
+runtimeButton_label=Vælg runtime
 projectButton_label=Åbn app
 
 mainProcess_label=Hovedproces
@@ -21,6 +21,10 @@ importHostedApp_header=Indtast manifest-URL
 
 notification_showTroubleShooting_label=fejlfinding
 notification_showTroubleShooting_accesskey=f
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Indlæser…
 
 # These messages appear in a notification box when an error occur.
 
