[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
@@ -645,21 +645,21 @@ resizePageArgHeightDesc=Höjd i pixlar
 # LOCALIZATION NOTE (resizeModeOnDesc) A very short string to describe the
 # 'resizeon ' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeOnDesc=Öppna Responsiv design-läget
+resizeModeOnDesc=Öppna Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeOffDesc) A very short string to describe the
 # 'resize off' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeOffDesc=Avsluta Responsiv design-läget
+resizeModeOffDesc=Avsluta Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeToggleDesc) A very short string to describe the
 # 'resize toggle' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeToggleDesc=Växla Responsiv design-läget
+resizeModeToggleDesc=Växla Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeToggleTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles Responsive Design Mode.
-resizeModeToggleTooltip=Responsivt designläge
+resizeModeToggleTooltip=Följsamt designläge
 
 # LOCALIZATION NOTE (resizeModeToDesc) A very short string to describe the
 # 'resize to' command. This string is designed to be shown in a menu
@@ -669,12 +669,12 @@ resizeModeToDesc=Ändra sidstorlek
 # LOCALIZATION NOTE (resizeModeDesc) A very short string to describe the
 # 'resize' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeDesc=Kontrollera Responsiv design-läget
+resizeModeDesc=Kontrollera Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeManual) A fuller description of the 'resize'
 # command, displayed when the user asks for help on what it does.
 # The argument (%1$S) is the browser name.
-resizeModeManual2=Responsiva webbplatser anpassar sig till miljön så att de ser bra ut på mobila enheter, en bioduk och allt där emellan. Med Responsiv design-läget kan du enkelt testa ett flertal sidstorlekar i %1$S utan att behöva ändra storleken på webbläsaren.
+resizeModeManual2=Föjsammaa webbplatser anpassar sig till miljön så att de ser bra ut på mobila enheter, en bioduk och allt där emellan. Med Följsam design-läget kan du enkelt testa ett flertal sidstorlekar i %1$S utan att behöva ändra storleken på webbläsaren.
 
 # LOCALIZATION NOTE (cmdDesc) A very short description of the 'cmd'
 # command. This string is designed to be shown in a menu alongside the command
