[ta] update from Pootle (firefox)

--- a/ta/toolkit/chrome/global/autocomplete.properties
+++ b/ta/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = %S மூலம் தேடவும்
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — %1$S மூலம் தேடு\u0020
 switchToTab = தத்தலுக்கு மாறு
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = %S பார்
