--- a/ta/toolkit/chrome/global/charsetMenu.properties
+++ b/ta/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = மத்திய ஐரோப்பியம் (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = எளிய சீனம்
 
 # Chinese, Traditional
