--- a/ta/toolkit/chrome/global/resetProfile.properties
+++ b/ta/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=பார்க்கப்போனால் நீங்கள் %S க்குள் ஆரம்பிக்கவே இல்லை போல் தெரிகிறது. நீங்கள் ஒரு புதுமைக்காக சுத்தம் செய்ய வேண்டுமா, புதிய அனுபவம் போன்று? அச்நமயம் தாங்களை மீண்டும் வரவேற்கிறோம்!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=%S ஐ புதுப்பி...
+refreshProfile.resetButton.accesskey=e
