--- a/it/security/manager/chrome/pippki/pippki.properties
+++ b/it/security/manager/chrome/pippki/pippki.properties
@@ -108,17 +108,17 @@ writeFileUnknownError = Errore sconosciuto
 addExceptionBrandedWarning2 = Si sta per modificare il modo in cui %S identifica questo sito.
 addExceptionInvalidHeader = Il sito ha cercato di identificarsi fornendo informazioni non valide.
 addExceptionDomainMismatchShort = Sito errato
-addExceptionDomainMismatchLong = Il certificato appartiene a un sito diverso, questo può rappresentare un tentativo di furto d’identità.
+addExceptionDomainMismatchLong2 = Il certificato appartiene a un altro sito, potrebbe trattarsi di un tentativo di sostituirsi al sito originale.
 addExceptionExpiredShort = Informazioni obsolete
-addExceptionExpiredLong = Il certificato non è più valido. Impossibile verificare se l’identità fornita sia stata rubata o persa.
+addExceptionExpiredLong2 = Il certificato non è più valido. È possibile che sia stato rubato o perso, e potrebbe essere utilizzato nel tentativo di sostituirsi al sito originale.
 addExceptionUnverifiedOrBadSignatureShort = Identità sconosciuta
-addExceptionUnverifiedOrBadSignatureLong = Il certificato non è affidabile in quanto non è stato verificato da un’autorità riconosciuta utilizzando una firma sicura.
+addExceptionUnverifiedOrBadSignatureLong2 = Il certificato non è affidabile in quanto non è possibile verificare che sia stato emesso da un’autorità riconosciuta utilizzando una firma sicura.
 addExceptionValidShort = Certificato valido
 addExceptionValidLong = Questo sito ha fornito un certificato valido e verificato. Non è necessario aggiungere un’eccezione.
 addExceptionCheckingShort = Controllo informazioni
-addExceptionCheckingLong = Tentativo di identificare il sito…
+addExceptionCheckingLong2 = Tentativo di identificazione del sito…
 addExceptionNoCertShort = Nessuna informazione disponibile
-addExceptionNoCertLong = Impossibile ottenere lo stato dell’identificazione per il sito fornito.
+addExceptionNoCertLong2 = Impossibile ottenere lo stato dell’identificazione per questo sito.
 addExceptionConnectionFailed = Connessione non riuscita
 caCertExistsTitle = Certificato già presente
 caCertExistsMessage = Il certificato è già presente.
