[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -14,8 +14,8 @@ Less=Manj
 MoreProperties=Več lastnosti
 FewerProperties=Manj lastnosti
 PropertiesAccessKey=P
-None=Nič
-none=nič
+None=Brez
+none=brez
 OpenHTMLFile=Odpri datoteko HTML
 OpenTextFile=Odpri besedilno datoteko
 SelectImageFile=Izberi slikovno datoteko
@@ -27,7 +27,7 @@ Preview=Predogled
 Publish=Objavi
 PublishPage=Objavi stran
 DontPublish=Ne objavi
-SavePassword=Uporabi Upravitelja gesel, da to geslo shrani
+SavePassword=Za shranjevanje tega gesla uporabi Upravitelja gesel
 CorrectSpelling=(popravi črkovanje)
 NoSuggestedWords=(ni predlogov za izraz)
 NoMisspelledWord=Vse besede so brez napak.
