--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -609,7 +609,7 @@ customizeTips.tip0.learnMore = Meer info
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
-appmenu.restartNeeded.description = %S herstarten om de updates toe te passen
-appmenu.updateFailed.description = Update op de achtergrond mislukt, download de update
+appmenu.restartNeeded.description = Herstart %S om updates toe te passen
+appmenu.updateFailed.description = Bijwerken op de achtergrond mislukt, download de update
 appmenu.restartBrowserButton.label = %S herstarten
 appmenu.downloadUpdateButton.label = Update downloaden
