--- a/nl/browser/chrome/browser/downloads/downloads.properties
+++ b/nl/browser/chrome/browser/downloads/downloads.properties
@@ -47,7 +47,7 @@ stateDirty=Geblokkeerd: kan een virus of spyware bevatten
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 blockedMalware=Dit bestand bevat een virus of malware.
 blockedPotentiallyUnwanted=Dit bestand kan uw computer beschadigen.
-blockedUncommon=Dit bestand kan niet veilig zijn om te openen.
+blockedUncommon=Dit bestand is mogelijk niet veilig om te openen.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -57,12 +57,12 @@ blockedUncommon=Dit bestand kan niet veilig zijn om te openen.
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
-unblockHeader=Weet u zeker dat u dit bestand niet wilt blokkeren?
+unblockHeader=Weet u zeker dat u dit bestand wilt deblokkeren?
 unblockTypeMalware=Dit bestand bevat een virus of andere malware die uw computer zal beschadigen.
-unblockTypePotentiallyUnwanted=Dit bestand, vermomd als een nuttige download, zal onverwachte wijzigingen in uw programma's en instellingen maken.
-unblockTypeUncommon=Dit bestand is gedownload van een onbekende en potentieel gevaarlijke website en kan onveilig zijn om te openen.
-unblockTip=U kunt zoeken naar een alternatieve downloadbron of het bestand later nogmaals proberen te downloaden.
-unblockButtonContinue=Toch niet blokkeren
+unblockTypePotentiallyUnwanted=Dit bestand, vermomd als een nuttige download, zal onverwachte wijzigingen in uw programma’s en instellingen aanbrengen.
+unblockTypeUncommon=Dit bestand is van een onbekende en potentieel gevaarlijke website gedownload en is mogelijk niet veilig om te openen.
+unblockTip=U kunt naar een alternatieve downloadbron zoeken, of het bestand later nogmaals proberen te downloaden.
+unblockButtonContinue=Toch deblokkeren
 unblockButtonCancel=Hou me veilig
 
 # LOCALIZATION NOTE (sizeWithUnits):
