--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -10,11 +10,11 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Neem deel aan het gesprek
+first_time_experience_title={{clientShortname}} – Neem deel aan het gesprek
 first_time_experience_button_label=Beginnen
 
-share_link_header_text=Deze koppeling delen om iemand uit te nodigen voor een gesprek:
-invite_header_text=Iemand uitnodigen om met u deel te nemen
+share_link_header_text=Deel deze koppeling om iemand uit te nodigen voor een gesprek:
+invite_header_text=Iemand uitnodigen om deel te nemen.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -62,11 +62,10 @@ problem_accessing_account=Er was een probleem bij het benaderen van uw account
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Opnieuw proberen
 
-share_email_subject4={{clientShortname}} — Neem deel aan het gesprek
+share_email_subject4={{clientShortname}} – Neem deel aan het gesprek
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Hallo!\r\n\r\nStart met me een videogesprek via {{clientShortname}}:\r\n\r\nU hoeft niks te downloaden of te installeren. Kopieeer en plak deze URL in uw browser:\r\n\r\n{{callUrl}}\r\n\r\nAls u wilt kunt u meer informatie krijgen over {{clientShortname}} op {{learnMoreUrl}}\r\n\r\nSpreek u snel!
-
+share_email_body4=Hallo!\r\n\r\nBegin een videogesprek met mij via {{clientShortname}}:\r\n\r\nU hoeft niets te downloaden of te installeren. Kopieer en plak alleen deze URL in uw browser:\r\n\r\n{{callUrl}}\r\n\r\nAls u wilt, kunt u meer informatie over {{clientShortname}} vinden op {{learnMoreUrl}}\r\n\r\nIk spreek u snel!
 share_button=E-mail
 share_button2=Koppeling e-mailen
 copy_url_button=Kopiëren
@@ -293,7 +292,7 @@ feedback_rejoin_button=Terugkeren
 feedback_report_user_button=Gebruiker rapporteren
 
 help_label=Help
-tour_label=Tour
+tour_label=Rondleiding
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
@@ -305,16 +304,16 @@ rooms_list_copy_url_tooltip=Koppeling kopiëren
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Lopende gesprekken;Lopende gesprekkken
+rooms_list_current_conversations=Huidige gesprek;Huidige gesprekkken
 rooms_list_delete_tooltip=Gesprek verwijderen
 rooms_list_deleteConfirmation_label=Weet u het zeker?
-rooms_list_no_current_conversations=Geen lopende gesprekken
-rooms_name_this_room_label=Geef dit gesprek een naam
-rooms_new_room_button_label=Gesprek starten
-rooms_only_occupant_label=U bent de eerste.
-rooms_panel_title=Kies een gesprek of start een nieuwe
+rooms_list_no_current_conversations=Geen huidige gesprekken
+rooms_name_this_room_label=Dit gesprek een naam geven
+rooms_new_room_button_label=Een gesprek beginnen
+rooms_only_occupant_label=U bent de eerste hier.
+rooms_panel_title=Kies of begin een nieuw gesprek
 rooms_room_full_label=Er zijn al twee personen in dit gesprek.
-rooms_room_full_call_to_action_nonFx_label={{brandShortname}} downloaden om ook te starten
+rooms_room_full_call_to_action_nonFx_label=Download {{brandShortname}} om zelf een gesprek te beginnen
 rooms_room_full_call_to_action_label=Meer info over {{clientShortname}} »
-rooms_room_joined_label=Iemand neem deel aan het gesprek!
-rooms_room_join_label=Neem deel aan het gesprek
+rooms_room_joined_label=Iemand neemt deel aan het gesprek!
+rooms_room_join_label=Deelnemen aan het gesprek
