--- a/nl/browser/chrome/browser/places/places.properties
+++ b/nl/browser/chrome/browser/places/places.properties
@@ -86,9 +86,10 @@ switchtabResultLabel=Tabblad
 keywordResultLabel=Sleutelwoord
 searchengineResultLabel=Zoeken
 
+
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
-lockPrompt.title=Fout bij opstarten browser
+lockPrompt.title=Fout bij opstarten van browser
 lockPrompt.text=Het bladwijzer- en geschiedenissysteem zal niet werken, omdat één van de bestanden van %S in gebruik is door een andere toepassing. Sommige beveiligingssoftware kan dit probleem veroorzaken.
 lockPromptInfoButton.label=Meer info
 lockPromptInfoButton.accessKey=M
