[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/devtools/webide.properties
+++ b/cy/browser/chrome/browser/devtools/webide.properties
@@ -33,7 +33,7 @@ error_cantInstallValidationErrors=Methu gosod y project. Gwallau dilysu.
 error_listRunningApps=Methu derbyn rhestr apiau o'r ddyfais
 
 # Variable: name of the operation (in english)
-error_operationTimeout=Daeth y weithredi i ben: %1$S
+error_operationTimeout=Daeth y weithred i ben: %1$S
 error_operationFail=Methodd y weithred: %1$S
 
 # Variable: app name
