--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -13,7 +13,7 @@ droponhomemsg=Ydych chi am i'r ddogfen fod yn dudalen cartref newydd i chi?
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
 contextMenuSearch=Chwilio %1$S am "%2$S"
-contextMenuSearch.accesskey=S
+contextMenuSearch.accesskey=C
 
 # bookmark dialog strings
 
@@ -24,11 +24,11 @@ xpinstallPromptAllowButton=Caniatáu
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
-xpinstallPromptAllowButton.accesskey=A
+xpinstallPromptAllowButton.accesskey=a
 xpinstallDisabledMessageLocked=Mae gosod meddalwedd wedi ei analluogi gan eich gweinyddwr system.
 xpinstallDisabledMessage=Mae gosod meddalwedd wedi ei analluogi. Cliciwch Galluogi a cheisio eto.
 xpinstallDisabledButton=Galluogi
-xpinstallDisabledButton.accesskey=n
+xpinstallDisabledButton.accesskey=G
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -37,7 +37,7 @@ xpinstallDisabledButton.accesskey=n
 addonDownloading=Llwytho Ychwanegyn i Lawr;Llwytho Ychwanegion i Lawr
 addonDownloadCancelled=Diddymu llwytho ychwanegyn i lawr;Diddymu llwytho ychwanegion i lawr.
 addonDownloadRestart=Ailgychwyn Llwytho i Lawr;Ailgychwyn Llwytho i Lawr
-addonDownloadRestart.accessKey=R
+addonDownloadRestart.accessKey=A
 addonDownloadCancelTooltip=Diddymu
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
@@ -47,7 +47,7 @@ addonDownloadCancelTooltip=Diddymu
 addonsInstalled=Mae #1 wedi ei osod yn llwyddiannus.;#2 ychwanegyn wedi eu gosod yn llwyddiannus.
 addonsInstalledNeedsRestart=Bydd #1 yn cael ei osod ar ôl ailgychwyn #3.;#2 ychwanegyn fydd yn cael eu gosod ar ôl i chi ailgychwyn #3.
 addonInstallRestartButton=Ailgychwyn Nawr
-addonInstallRestartButton.accesskey=R
+addonInstallRestartButton.accesskey=A
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
