[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -35,33 +35,33 @@ CheckSpellingDone=Črkovanje je zaključeno.
 CheckSpelling=Preveri črkovanje
 InputError=Napaka
 Alert=Opozorilo
-CantEditFramesetMsg=Composer ne more urejati okvirov HTML oziroma strani z notranjimi (inline) okviri. Za 'framesete' poizkusite urediti stran za vsak okvir posebej. Za strani z 'iframes' shranite kopijo strani in odstranite oznako <iframe>.
+CantEditFramesetMsg=Sestavljalnik ne more urejati niza okvirjev HTML oziroma strani z okvirji v besedilu. Za nize okvirjev poskusite urediti stran za vsak okvir posebej. Za strani z okvirji iframe shranite kopijo strani in odstranite oznako <iframe>.
 CantEditMimeTypeMsg=Te vrste strani ni mogoče urejati.
 CantEditDocumentMsg=Te strani iz neznanega vzroka ni mogoče urejati,
 BeforeClosing=pred zapiranjem
 BeforePreview=pred ogledom strani v brskalniku
 BeforeValidate=pred preverjanjem dokumenta
 # LOCALIZATION NOTE (SaveFilePrompt, PublishPrompt): Don't translate %title% and %reason% (this is the reason for asking user to close, such as "before closing")
-SaveFilePrompt=Naj se spremembe shrani v "%title%" %reason%? \u0020
-PublishPrompt=Naj se spremembe shrani v "%title%" %reason%? \u0020
-SaveFileFailed=Datoteke ni uspelo shraniti!
+SaveFilePrompt=Shrani spremembe v "%title%" %reason%? \u0020
+PublishPrompt=Shrani spremembe v "%title%" %reason%? \u0020
+SaveFileFailed=Shranjevanje datoteke je spodletelo!
 
 # Publishing error strings:
 # LOCALIZATION NOTE Don't translate %dir% or %file% in the Publishing error strings:
-FileNotFound=Datoteke %file% ne najdem.
-SubdirDoesNotExist=Podimenik "%dir%" ne obstaja na tem strežniku, ali pa je ime datoteke "%file%" že zasedeno, ker ga uporablja drug podimenik.
-FilenameIsSubdir=Ime datoteke %file% je že zasedeno, ker ga uporablja drug podimenik.
-ServerNotAvailable=Strežnik ni na voljo. Preverite svojo povezavo in poskusite pozneje.
+FileNotFound=Datoteke %file% ni bilo mogoče najti.
+SubdirDoesNotExist=Podmapa "%dir%" ne obstaja na tem strežniku ali pa je ime datoteke "%file%" že uporablja druga podmapa.
+FilenameIsSubdir=Ime datoteke %file% že uporablja druga podmapa.
+ServerNotAvailable=Strežnik ni na voljo. Preverite svojo povezavo in poskusite znova kasneje.
 Offline=Trenutno ste brez povezave. Za delo s povezavo kliknite ikono poleg spodnjega desnega roba v kateremkoli oknu.
 DiskFull=Na disku ni dovolj prostora za shranjevanje "%file%".
-NameTooLong=Ime datoteke ali podimenika je predolgo.
+NameTooLong=Ime datoteke ali podmape je predolgo.
 AccessDenied=Nimate pravic objavljanja na tem mestu.
-UnknownPublishError=Prišlo je do neznane napake pri objavljanju.
+UnknownPublishError=Pri objavljanju je prišlo do neznane napake .
 PublishFailed=Objavljanje ni uspelo.
 PublishCompleted=Objavljanje zaključeno.
 AllFilesPublished=Vse datoteke so objavljene
 # LOCALIZATION NOTE Don't translate %x% or %total%
-FailedFileMsg=%x% od %total% datotek ni uspelo objaviti.
+FailedFileMsg=Objavljanje %x% od %total% datotek je spodletelo.
 # End-Publishing error strings
 Prompt=Poziv
 # LOCALIZATION NOTE (PromptFTPUsernamePassword): Don't translate %host% 
@@ -71,19 +71,19 @@ Revert=Povrni
 SendPageReason=pred pošiljanjem te strani
 Send=Pošlji
 ## LOCALIZATION NOTE (PublishProgressCaption, PublishToSite, AbandonChanges): Don't translate %title%
-PublishProgressCaption=Objava: %title%
-PublishToSite=Objava na stran: %title%
-AbandonChanges=Naj se spremembe za "%title%", ki niso shranjene, opusti in stran ponovno naloži?
+PublishProgressCaption=Objavljanje: %title%
+PublishToSite=Objavljanje na stran: %title%
+AbandonChanges=Opusti neshranjene spremembe v "%title%" in ponovno naloži stran?
 DocumentTitle=Naslov strani
 NeedDocTitle=Vnesite naslov te strani.
-DocTitleHelp=To identificira stran v naslovu okna in v zaznamkih.
-CancelPublishTitle=Naj objavo prekličem?
+DocTitleHelp=To prepozna stran v naslovu okna in v zaznamkih.
+CancelPublishTitle=Prekliči objavljanje?
 ## LOCALIZATION NOTE: "Continue" in this sentence must match the text for
 ## the CancelPublishContinue key below
-CancelPublishMessage=Preklic med objavljanjem lahko za seboj pusti datoteke, ki niso bile v celoti prenesene. Želite nadaljevati ali preklicati?
+CancelPublishMessage=Preklic med objavljanjem lahko povzroči nedokončan prenos datotek. Ali želite nadaljevati ali preklicati?
 CancelPublishContinue=Nadaljuj
 MissingImageError=Vnesite ali izberite sliko vrste gif, jpg, or png.
-EmptyHREFError=Izberite lokacijo za novo povezavo.
+EmptyHREFError=Izberite mesto za novo povezavo.
 LinkText=Besedilo povezave
 LinkImage=Slika povezave
 MixedSelection=[Mešana izbira]
@@ -98,7 +98,7 @@ ValidateNumberMsg=Vnesite število med %min% in %max%.
 MissingAnchorNameError=Vnesite ime za to sidro.
 #LOCALIZATION NOTE (DuplicateAnchorNameError): Don't translate %name%
 DuplicateAnchorNameError="%name%" na tej strani že obstaja. Vnesite kako drugo ime.
-BulletStyle=Slog alinej
+BulletStyle=Slog seznamskih točk
 SolidCircle=Zapolnjen krog
 OpenCircle=Krožnica
 SolidSquare=Zapolnjen kvadrat
@@ -120,8 +120,8 @@ untitledDefaultFilename=brez naslova
 ShowToolbar=Pokaži orodno vrstico
 HideToolbar=Skrij orodno vrstico
 ImapError=Slike ni moč naložiti \u0020
-ImapCheck=\nIzberite novo lokacijo (URL) in poskusite znova.
-SaveToUseRelativeUrl=Relativne URI-je se lahko uporablja samo straneh, ki so že shranjene
+ImapCheck=\nIzberite novo mesto (URL) in poskusite znova.
+SaveToUseRelativeUrl=Relativne URL-je se lahko uporablja samo straneh, ki so že shranjene
 NoNamedAnchorsOrHeadings=(Na tej strani ni ne poimenovanih sider ne naslovov)
 TextColor=Barva besedila
 HighlightColor=Barva označenega besedila
@@ -136,7 +136,7 @@ VisitedLinkColor=Barva besedila že obiskane povezave
 NoColorError=Izberite barvo s klikom ali vnesite veljaven niz HTML za barve
 Table=Tabela
 TableCell=Celica tabele
-NestedTable=Ugnezdena tabela
+NestedTable=Vgnezdena tabela
 HLine=Vodoravna črta
 Link=Poveži
 Image=Slika
@@ -154,7 +154,7 @@ Label=Oznaka
 FieldSet=Nabor polj
 Tag=Oznaka
 MissingSiteNameError=Vnesite ime za to stran za objavo.
-MissingPublishUrlError=Vnesite lokacijo za objavo te strani.
+MissingPublishUrlError=Vnesite mesto za objavo te strani.
 MissingPublishFilename=Vnesite ime datoteke za trenutno stran.
 #LOCALIZATION NOTE (DuplicateSiteNameError): Don't translate %name%
 DuplicateSiteNameError="%name%" že obstaja. Vnesite kako drugo ime za spletišče.
@@ -199,7 +199,7 @@ RemoveLinksAccesskey=n
 RemoveLinks=Odstrani povezave
 StopLinks=Prekini povezavo
 #
-NoFormAction=Priporoča se, da vnesete akcijo za ta obrazec. Samodostavni obrazci so napredna tehnika, ki ne deluje dosledno v vseh brskalnikih.
+NoFormAction=Priporočljivo je vnesti dejanje za ta obrazec. Samodostavni obrazci so napredna tehnika, ki ne deluje dosledno v vseh brskalnikih.
 NoAltText=Če je slika pomembna za pomen spletne strani, morate zanjo vnesti nadomestno besedilo, ki se bo med nalaganjem slike v besedilnih brskalnikih in v ostalih brskalnikih izpisalo, medtem ko se slika nalaga ali pa v primeru, da je nalaganje slik onemogočeno.
 #
 Malformed=Vira ni bilo mogoče pretvoriti nazaj v dokument, ker nima pravilne oblike XHTML.
