Bug 1057035 - Fix terminology used in the certificate exception dialog

--- a/sk/security/manager/chrome/pippki/pippki.properties
+++ b/sk/security/manager/chrome/pippki/pippki.properties
@@ -145,17 +145,17 @@ writeFileUnknownError=Neznáma chyba
 addExceptionBrandedWarning2=Chystáte sa potlačiť spôsob, akým %S identifikuje túto stránku.
 addExceptionInvalidHeader=Táto stránka sa pokúša identifikovať neplatnými údajmi.
 addExceptionDomainMismatchShort=Nesprávna stránka
-addExceptionDomainMismatchLong=Certifikát patrí inej stránke, čo môže naznačovať ukradnutie identity.
+addExceptionDomainMismatchLong2=Certifikát patrí inej stránke, čo môže naznačovať, že niekto sa snaží vydávať sa za túto stránku.
 addExceptionExpiredShort=Informácie sú zastarané
-addExceptionExpiredLong=Certifikát servera už nie je platný. Je možné overiť, či táto identita nebola nahlásená ako ukradnutá alebo stratená.
+addExceptionExpiredLong2=Certifikát servera už nie je platný. Mohol byť ukradnutý alebo stratený, a mohol byť použitý niekým, kto sa snaží vydávať sa za túto stránku.
 addExceptionUnverifiedOrBadSignatureShort=Neznáma identita
-addExceptionUnverifiedOrBadSignatureLong=Certifikát servera nie je dôveryhodný, pretože nebol overený uznávanou autoritou použitím bezpečného algoritmu.
+addExceptionUnverifiedOrBadSignatureLong2=Certifikát servera nie je dôveryhodný, pretože nebol vydaný dôveryhodnou autoritou použitím bezpečného algoritmu.
 addExceptionValidShort=Platný certifikát
 addExceptionValidLong=Táto stránka poskytuje platnú, overenú identifikáciu. Nie je potrebné pridať výnimku.
 addExceptionCheckingShort=Kontrola informácií
-addExceptionCheckingLong=Pokus o identifikovanie stránky…
+addExceptionCheckingLong2=Pokus o identifikovanie tejto stránky…
 addExceptionNoCertShort=Informácie nie sú dostupné
-addExceptionNoCertLong=Nie je možné získať stav identifikácie pre zadanú stránku.
+addExceptionNoCertLong2=Nie je možné získať stav identifikácie pre túto stránku.
 addExceptionConnectionFailed=Pripojenie zlyhalo
 
 #Certificate Exists in database
